# zopfli

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md
.github/: renovate.json
.github/workflows/: ci.yml  zopfli.yml
benchmark-builds/: .gitignore  README.md  bench.sh  prepare.sh
src/: blocksplitter.rs  cache.rs  deflate.rs  gzip.rs  hash.rs  io.rs  iter.rs  katajainen.rs  lib.rs  lz77.rs  main.rs  math.rs  squeeze.rs  symbols.rs  tree.rs  util.rs  zlib.rs
src/zopfli/: blocksplitter.c  blocksplitter.h  blocksplitter.rs  cache.c  cache.h  cache.rs  deflate.c  deflate.h  deflate.rs  gzip.rs  gzip_container.c  hash.c  hash.h  hash.rs  katajainen.c  katajainen.rs  lib.rs  lz77.c  lz77.h  lz77.rs  squeeze.c  squeeze.rs  symbols.h  symbols.rs  tree.c  tree.h  tree.rs  util.c  util.h  util.rs  zlib.rs  zlib_container.c  zlib_container.h  zopfli.h  zopfli.rs  zopfli_bin.c  zopfli_lib.c
test/: every-commit.sh  perf-by-commit.sh  run.sh  wc-by-lang.sh
test/data/: 30-min.csv  calgary-books.txt  codetriage.js
test/perf/: .gitignore  README.md  bench.sh  prepare.sh  profile.sh
